# WDP_Lab8

./: CMakeLists.txt  README.md  main.cpp
Docs/: Lab_8 opis.docx  Lab_8.docx
Menu/: menu.cpp
Zadania/: Randomizer.cpp  Randomizer.h  Zadanie81.cpp  Zadanie81.h  Zadanie82.cpp  Zadanie82.h  Zadanie83.cpp  Zadanie83.h  Zadanie84.cpp  Zadanie84.h  Zadanie85.cpp  Zadanie85.h  Zadanie86.cpp  Zadanie86.h  Zadanie87.cpp  Zadanie87.h  Zadanie88.cpp  Zadanie88.h
